--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -13,11 +13,14 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn"
-        android:layout_width="100dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:background="@color/white"
-        android:text="start" />
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/file_lock_action_border_background"
+        android:text="start"
+        android:textColor="@color/white" />
 
 </RelativeLayout>
