--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
+    android:width="56dp"
+    android:height="56dp"
+    android:viewportWidth="297"
+    android:viewportHeight="297">
     <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+        android:pathData="M252.07,167.87c-4.95,-29.48 -26.58,-35.19 -35.98,-36.27c-6.67,-8.98 -16.33,-13.89 -27.43,-13.89c-2.66,0 -5.16,0.28 -7.41,0.7c-6.59,-7.59 -15.83,-11.69 -26.14,-11.69c-0.21,0 -0.91,0 -0.91,0v-9.01c15,-9.42 24.88,-25.93 24.88,-44.72c0,-29.23 -23.64,-53 -52.86,-53S73.07,23.77 73.07,53c0,18.65 10.14,35.07 24.14,44.52v43.87l-0.43,-1.01c-5.39,-8.77 -13.94,-13.79 -23.69,-13.79c-10.51,-0 -20.58,5.93 -25.75,15.11c-4.94,8.77 -4.66,18.99 0.7,28.09l62.34,119.39c2.49,4.76 7.38,7.82 12.75,7.82h87.76c7.58,0 13.88,-6.03 14.34,-13.59l2.04,-33.26C249.03,216.64 256.23,192.64 252.07,167.87zM85.14,53c0,-22.61 18.51,-41 41.12,-41s40.78,18.39 40.78,41c0,11.59 -4.83,22.07 -12.83,29.53V69.75c0,-3.05 -0.84,-8.67 -0.84,-8.67c0.76,-2.56 1.26,-5.27 1.26,-8.08c0,-15.65 -12.64,-28.33 -28.29,-28.33c-15.65,0 -28.31,12.69 -28.31,28.33c0,2.57 0.36,5.05 1,7.42c-0.02,0.05 -0.2,0.1 -0.22,0.15c-0.91,2.86 -1.6,5.94 -1.6,9.18v12.48C90.2,74.79 85.14,64.44 85.14,53zM215.83,245.65c-0.23,0.34 -0.36,0.75 -0.39,1.16l-2.2,35.87c-0.08,1.25 -1.11,2.33 -2.37,2.33h-87.76c-0.88,0 -1.69,-0.59 -2.1,-1.37L58.54,163.99c-7.93,-13.09 3.25,-25.37 14.66,-25.37c5.05,0 10.15,2.39 13.65,8.18l7.99,12.27c1.65,2.54 3.94,3.67 6.44,3.67c4.11,0 7.92,-3.09 7.92,-8.08V69.75c0,-11.03 8.22,-16.55 16.5,-16.55c8.28,0 16.5,5.52 16.5,16.55v48.27c0,1.35 1.38,2.38 2.64,2.38c0.24,0 0.62,-0.04 0.86,-0.11c2.31,-0.74 5.79,-1.56 9.62,-1.56c6.57,0 14.39,2.42 19.86,11.81c0.46,0.79 1.31,1.26 2.18,1.26c0.28,0 0.57,-0.05 0.85,-0.15c2.2,-0.81 6.05,-1.93 10.45,-1.93c6.13,0 13.36,2.18 18.74,10.4c1.28,1.96 3.46,3.15 5.8,3.28c7.44,0.42 23.27,4.01 27.04,26.46C243.85,191.41 237.62,212.65 215.83,245.65z"
+        android:fillColor="#FFFFFF"/>
 </vector>
